--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
 .App {
+  margin: 20px;
   text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, 350px);
+  grid-template-rows: 20px, repeat(2, 350px);
+  grid-gap: 10px;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+video {
+  width: 350px;
+  height: 350px;
 }
